2002-08-02  Theodore A. Roth  <troth@verinet.com>

	* Makefile.am: Make doc subdir conditional.
	* configure.in: Fix so docs are only built once.

2002-08-02  Theodore A. Roth  <troth@verinet.com>

	* doc/api/Makefile.am(clean-local): Added man dir for cleanup.
	* doc/api/Makefile.am: Fixed circular dependancy for dox-html <-> html.

2002-07-31  Theodore A. Roth  <troth@verinet.com>

	* crt1/gcrt1.S: Allow gcc versions >= 3.2.
	* libc/pmstring/strncpy_P.S: Fix typo is doxy comment.

2002-07-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/inline_asm.dox: fix hrefs.

2002-07-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: Add faq.dox file.
	* doc/api/faq.dox: New file.

2002-07-26  Theodore A. Roth  <troth@verinet.com>

	* doc/api/Makefile.am(dox-pdf): Use ${MAKE} instead of make.
	* doc/api/Makefile.am(dox-ps): Use ${MAKE} instead of make.

2002-07-25  Theodore A. Roth  <troth@verinet.com>

	* doc/api/Makefile.am(EXTRA_DIST): Add *.dox files.
	* doc/api/doxygen.config.in: Config tweaks.
	* doc/api/main_page.dox: New file.
	* doc/api/inline_asm.dox: New file. (Thanks to Harald Kipp)
	* include/inttypes.h: Updated comments for doxygen.
	* include/string.h: Updated comments for doxygen.
	* include/avr/signal.h: Updated comments for doxygen.
	* libc/string/memccpy.S: Updated comments for doxygen.
	* libc/string/memchr.S: Updated comments for doxygen.
	* libc/string/memcmp.S: Updated comments for doxygen.
	* libc/string/memcpy.S: Updated comments for doxygen.
	* libc/string/memmove.S: Updated comments for doxygen.
	* libc/string/memset.S: Updated comments for doxygen.
	* libc/string/strcasecmp.S: Updated comments for doxygen.
	* libc/string/strcat.S: Updated comments for doxygen.
	* libc/string/strchr.S: Updated comments for doxygen.
	* libc/string/strcmp.S: Updated comments for doxygen.
	* libc/string/strcpy.S: Updated comments for doxygen.
	* libc/string/strlcat.c: Updated comments for doxygen.